--- a/src/app/modules/FeesManagement/StudentDocument/uploadstudentdocument/uploadstudentdoc.component.scss
+++ b/src/app/modules/FeesManagement/StudentDocument/uploadstudentdocument/uploadstudentdoc.component.scss
@@ -8,3 +8,10 @@ mat-form-field
     padding-right: 10px;
     
 }
+.mat-column-FileId{
+    flex : none;
+    width: 120px;
+    display:grid;
+    text-align: center;
+    
+}
