--- a/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
+++ b/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
@@ -1,12 +1,11 @@
 ng-material-multilevel-menu{
-  top:200px;
- 
+  margin-top:200px;
 }
 .my-cool-menu-item {
   display: flex;
   padding-left: 10px;
   padding-right: 10px;
-  border-bottom: solid 1px #3C99DC;
+  border-bottom: solid 1px gray;
   height: 48px;
 }
 img{
@@ -49,46 +48,3 @@ div[dir=ltr] .icon-container {
   margin-left: 80px;
   
 }
-
-// .highlight{ background-color: green }
-// .active{
-//   background-color: gray;
-// }
-// .my-cool-menu-item {
-//   display: flex;
-//   padding-left: 10px;
-//   padding-right: 10px;
-//   border-bottom: solid 1px rgba(0,0,0,.12);
-//   height: 48px;
-// }
-
-// .my-cool-menu-item .title-and-image {
-//   width: 100%;
-//   display: flex;
-//   justify-content: flex-start;
-// }
-
-// .my-cool-menu-item .title-and-image .icon-container {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-// }
-
-// div[dir=rtl] .icon-container {
-//   padding-left: 5px;
-// }
-
-// div[dir=ltr] .icon-container {
-//   padding-right: 5px;
-// }
-
-// .my-cool-menu-item .title-and-image .label-container {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-// }
-
-// .my-cool-menu-item .icon-arrow-container {
-//   display: flex;
-//   align-items: center;
-// }
