--- a/src/app/modules/photogallery/albums/albums.component.scss
+++ b/src/app/modules/photogallery/albums/albums.component.scss
@@ -1,9 +1,6 @@
-// mat-card{
-//     height:100%;
-//     margin:12px;
-//     min-height: 100vh;
-  
-// }
+:host{
+    width:78%;
+}
 .item{
     border: 1px thin gray;
     //border-color:gray;
