--- a/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.html
+++ b/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.html
@@ -12,14 +12,14 @@
                 </ngx-dropzone>
             </div>
             <br>
-            <div>
-                <mat-form-field hintLabel="Max 100 characters" appearance="outline" fxFlex="30">
+            <div fxLayout="row wrap" fxLayoutAlign="space-between center">
+                <mat-form-field hintLabel="Max 100 characters" appearance="outline">
                     <mat-label>Enter album</mat-label>
                     <input formControlName="UpdatedFileFolderName" #album matInput maxlength="100" autocomplete="off">
                     <mat-hint align="end">{{album.value?.length || 0}}/100</mat-hint>
                 </mat-form-field>       
                 <span style="margin: 5px;">or</span>         
-                <mat-form-field appearance="outline" fxFlex="30">
+                <mat-form-field appearance="outline">
                     <mat-label>Existing albums</mat-label>
                     <mat-select formControlName="parentId">
                       <mat-option *ngFor="let album of Albums" [value]="album.FileId">{{album.UpdatedFileFolderName}}</mat-option>
