--- a/src/app/modules/FeesManagement/StudentDocument/uploadstudentdocument/uploadstudentdoc.component.html
+++ b/src/app/modules/FeesManagement/StudentDocument/uploadstudentdocument/uploadstudentdoc.component.html
@@ -2,14 +2,7 @@
 <br>
 <div class="divCls" fxLayout="row wrap" fxLayoutGap="100px">
     <form [formGroup]="uploadForm" fxLayout="row" fxLayoutAlign="space-between center">
-        <!-- <span style="color:red;" *ngIf="message">{{message}}</span> -->
-        <input #uploadfile [hidden]="true" type="file" (change)="uploadchange(uploadfile.files)" />
-        <!-- <span *ngIf="!Edit">
-                    <button class="mat-raised-button" matTooltip="edit" color="primary"
-                        (click)="edit()">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                </span> -->
+        <input #uploadfile type="file" (change)="uploadchange(uploadfile.files)" />
         <div>
             <mat-form-field appearance="outline" fxFlex>
                 <mat-label>Document type</mat-label>
@@ -19,12 +12,11 @@
                         {{p.MasterDataName}}
                     </mat-option>
                 </mat-select>
+                <span class="text-danger" *ngIf='f.DocTypeId.touched && f.DocTypeId.hasError("required")'>Document type
+                    is required.</span>
             </mat-form-field>
         </div>
         <span fxLayout="row" fxLayoutAlign="space-between center">
-            <button class="mat-raised-button" matTooltip="select file" color="primary" (click)="uploadfile.click()">
-                <mat-icon aria-label="photo">photo</mat-icon>
-            </button>&nbsp;&nbsp;
             <button type="submit" (click)="uploadFile()" matTooltip="upload file" class="mat-raised-button">
                 <mat-icon aria-label="file_upload">file_upload</mat-icon>
             </button>&nbsp;&nbsp;
@@ -33,14 +25,14 @@
 </div>
 <div fxLayout="row" fxLayoutAlign="space-between center" class="mat-elevation-z8">
     <mat-table [dataSource]="documentUploadSource" fxFlex>
-        <ng-container matColumnDef="StudentDocId">
+        <ng-container matColumnDef="FileId">
             <mat-header-cell *matHeaderCellDef> Document Id</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.StudentDocId}} </mat-cell>
+            <mat-cell *matCellDef="let element"> {{element.FileId}} </mat-cell>
         </ng-container>
-        <ng-container matColumnDef="DocName">
+        <ng-container matColumnDef="UpdatedFileFolderName">
             <mat-header-cell *matHeaderCellDef> Document Name </mat-header-cell>
             <mat-cell *matCellDef="let element">
-                {{element.DocName}}
+                {{element.UpdatedFileFolderName}}
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="DocType">
@@ -57,8 +49,10 @@
         </ng-container>
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-               <mat-icon>pageview</mat-icon>    
+            <mat-cell (click)="pageview(element.path)" *matCellDef="let element">
+                <button mat-mini-fab>
+                    <mat-icon>pageview</mat-icon>
+                </button>
             </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="UploadDisplayedColumns"></mat-header-row>
