--- a/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.html
@@ -93,7 +93,7 @@
     </form>
 </div>
 <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-    <button class="mat-raised-button" [disabled]="!studentclassForm.valid" (click)="UpdateOrSave()">
+    <button class="mat-raised-button" (click)="UpdateOrSave()">
         <mat-icon>save</mat-icon>
     </button>
     <button class="mat-raised-button" (click)="back()">
