--- a/src/app/modules/auth/authhome/authhome.component.html
+++ b/src/app/modules/auth/authhome/authhome.component.html
@@ -1,6 +1,4 @@
+<div style="background-color: #0F5298;">
 <app-header [deviceXs]="deviceXs"></app-header>
-<div>
-  <header>
-    <router-outlet></router-outlet>
-  </header>
+<router-outlet></router-outlet>
 </div>
