--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -3,12 +3,11 @@
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <div fxLayout="row" fxLayoutAlign="center start">
-            <div style="margin-right: 30px;">
+            <!-- <div style="margin-right: 30px;">
                 <img *ngIf="!deviceXs" src="/assets/images/stpaulslogo.png" width="120px" alt="St Paul's Institute" />
-            </div>
+            </div> -->
             <div>
                 <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-
                     <div class="form-group">
                         <label for="Email">Email</label>
                         <input type="Email" class="form-control" name="Email" autocomplete="Off"
