--- a/src/app/modules/auth/register/register.component.scss
+++ b/src/app/modules/auth/register/register.component.scss
@@ -15,7 +15,8 @@ button{
     margin-right: 15px;
 }
 .mat-card{
-    top:110px; 
+    position: relative;
+    margin-top:220px; 
 }
 .width100{
     width: 100%;
