--- a/src/app/modules/contact/addMessage/contact.component.html
+++ b/src/app/modules/contact/addMessage/contact.component.html
@@ -3,73 +3,48 @@
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <form [formGroup]="ContactForm" (ngSubmit)="onSubmit()">
-            <div class="container">
-                <div class="row">
-                    <div class="column">
-                        <mat-form-field hintLabel="Max 25 characters" appearance="outline" fxFlex [style.width.px]="400">
-                            <mat-label>Name</mat-label>
-                            <input formControlName="Name" #Name matInput maxlength="30" autocomplete="Off" required>
-                            <mat-hint align="end">{{Name.value?.length || 0}}/30</mat-hint>
-                            <span class="text-danger" *ngIf="f.Name.touched && f.Name.hasError('required')">Name
-                                is required.</span>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <mat-form-field hintLabel="Max 30 characters" appearance="outline" fxFlex [style.width.px]="400">
-                            <mat-label>Email</mat-label>
-                            <input formControlName="Email" type="email" #Email matInput maxlength="30" autocomplete="Off" required>
-                            <mat-hint align="end">{{Email.value?.length || 0}}/30</mat-hint>
-                            <span class="text-danger" *ngIf="f.Email.touched && f.Email.hasError('required')">Email
-                                is required.</span>
-                                <span class="text-danger" *ngIf="f.Email.touched && f.Email.hasError('email')">Invalid Email.</span>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <mat-form-field hintLabel="Max 50 characters" appearance="outline" fxFlex [style.width.px]="400">
-                            <mat-label>Subject</mat-label>
-                            <input formControlName="Subject" #Subject matInput maxlength="50" autocomplete="Off" required>
-                            <mat-hint align="end">{{Subject.value?.length || 0}}/50</mat-hint>
-                            <span class="text-danger"
-                                *ngIf="f.Subject.touched && f.Subject.hasError('required')">Subject
-                                is required.</span>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <mat-form-field hintLabel="Max 250 characters" appearance="outline" fxFlex [style.width.px]="400">
-                            <mat-label>Message</mat-label>
-                            <textarea 
-                                      formControlName="MessageBody"  
-                                      #MessageBody matInput 
-                                      maxlength="250" 
-                                      autocomplete="Off" cdkTextareaAutosize
-                                      required></textarea>
-                            <mat-hint align="end">{{MessageBody.value?.length || 0}}/250</mat-hint>
-                            <span class="text-danger"
-                                *ngIf="f.MessageBody.touched && f.MessageBody.hasError('required')">Message
-                                is required.</span>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="column">
-                        <div class="col-4 col-md-4 mb-4">
-                            <button type="button" (click)="onSubmit()" *ngIf="Id==0" [disabled]="ContactForm.invalid" [style.width.px]="300"
-                                class="btn btn-info">Submit</button>
-                        </div>
-                    </div>
-                </div>
+            <div fxLayout="column" class="container">
+                <mat-form-field hintLabel="Max 25 characters" appearance="outline" [style.width.px]="300">
+                    <mat-label>Name</mat-label>
+                    <input formControlName="Name" #Name matInput maxlength="30" autocomplete="Off" required>
+                    <mat-hint align="end">{{Name.value?.length || 0}}/30</mat-hint>
+                    <span class="text-danger" *ngIf="f.Name.touched && f.Name.hasError('required')">Name
+                        is required.</span>
+                </mat-form-field>
+                <mat-form-field hintLabel="Max 30 characters" appearance="outline" [style.width.px]="300">
+                    <mat-label>Email</mat-label>
+                    <input formControlName="Email" type="email" #Email matInput maxlength="30" autocomplete="Off"
+                        required>
+                    <mat-hint align="end">{{Email.value?.length || 0}}/30</mat-hint>
+                    <span class="text-danger" *ngIf="f.Email.touched && f.Email.hasError('required')">Email
+                        is required.</span>
+                    <span class="text-danger" *ngIf="f.Email.touched && f.Email.hasError('email')">Invalid
+                        Email.</span>
+                </mat-form-field>
+                <mat-form-field hintLabel="Max 50 characters" appearance="outline" [style.width.px]="300">
+                    <mat-label>Subject</mat-label>
+                    <input formControlName="Subject" #Subject matInput maxlength="50" autocomplete="Off" required>
+                    <mat-hint align="end">{{Subject.value?.length || 0}}/50</mat-hint>
+                    <span class="text-danger" *ngIf="f.Subject.touched && f.Subject.hasError('required')">Subject
+                        is required.</span>
+                </mat-form-field>
+                <mat-form-field hintLabel="Max 250 characters" appearance="outline" fxFlex [style.width.px]="300">
+                    <mat-label>Message</mat-label>
+                    <textarea formControlName="MessageBody" #MessageBody matInput maxlength="250" autocomplete="Off"
+                        cdkTextareaAutosize required></textarea>
+                    <mat-hint align="end">{{MessageBody.value?.length || 0}}/250</mat-hint>
+                    <span class="text-danger"
+                        *ngIf="f.MessageBody.touched && f.MessageBody.hasError('required')">Message
+                        is required.</span>
+                </mat-form-field>
+                <button type="button" (click)="onSubmit()" *ngIf="Id==0" [disabled]="ContactForm.invalid"
+                    [style.width.px]="300" class="btn btn-info">Submit</button>
             </div>
         </form>
-        <div>
-            <button class="mat-raised-button" (click)="back()">
-            <mat-icon>arrow_back</mat-icon></button>
-        </div>
     </mat-card-content>
+    <mat-card-actions>
+        <button class="mat-raised-button" (click)="back()">
+            <mat-icon>arrow_back</mat-icon>
+        </button>
+    </mat-card-actions>
 </mat-card>
