--- a/src/app/modules/define-pages/displaypage/displaypage.component.html
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.html
@@ -1,7 +1,7 @@
 
 <mat-card class="contentbody">
     <mat-card-title>{{Title|titlecase}}</mat-card-title>
-    <mat-card-subtitle *ngIf="ParentPage.length>0">{{ParentPage}} > {{Title}}</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="ParentPage.length>0">{{ParentPage}}</mat-card-subtitle>
     <mat-card-content>
         <!-- <mat-progress-spinner *ngIf="loading" class="example-margin" [color]="color" [mode]="mode" [value]="value">
         </mat-progress-spinner> -->
@@ -10,8 +10,6 @@
             <div>
                 <p [innerHTML]="PageBody|encodeHTML"></p>
             </div>
-            <!-- <div class="child2">
-            </div> -->
         </div>
         <mat-card-actions>
             <button mat-button (click)="back()">
