--- a/src/app/modules/define-pages/texteditor/texteditor.component.html
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.html
@@ -3,6 +3,7 @@
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content fxLayout="column">
         <mat-spinner *ngIf="loading"></mat-spinner>
+        <alert></alert>
         <form [formGroup]="PageDetailForm">
             <div class="row">
                 <div class="column">
