--- a/src/app/modules/newsdashboard/newsdashboard.component.scss
+++ b/src/app/modules/newsdashboard/newsdashboard.component.scss
@@ -4,8 +4,10 @@
   width: 100%;
 }
 mat-card{
-  background-color: #20639b;
+  background-color: #1E4A75;
   border-radius: 1em;
+  margin-top: 10px;
+  //padding-top: 20px;
 }
 .mat-badge-content {
   width      : 30px;
@@ -21,37 +23,14 @@ button {
   margin-right: 15px;
 }
 
-.example-container {
-  display       : flex;
-  flex-direction: column;
-  min-width     : 100px;
-}
-
-.example-header {
-  min-height: 64px;
-  padding   : 8px 24px 0;
-}
-
-.mat-form-field {
-  font-size: 14px;
-  width    : 100%;
-}
-
-.newContainer{
-  max-width: 70ch;
-  min-width: 20ch;
-  box-shadow: 0px 1px lightgray;
-}
-
 .subtitle{
-  color:gray;
-  margin-top: 10px;
-  padding: 10px;
+  //color:gray;
+  //margin-bottom: 5px;
+  // margin-top: 5px;
+  // margin-bottom: 5px;
+  padding: 3px;
 }
-.content{
-  margin: 10px lightgray;
-  padding: 10px;
-}
+
 th.mat-header-cell,
 td.mat-cell,
 td.mat-footer-cell {
