--- a/src/app/modules/photogallery/carousel/carousel.component.html
+++ b/src/app/modules/photogallery/carousel/carousel.component.html
@@ -1,27 +1,28 @@
 <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
-<mat-card>
+<mat-card style="padding: 0px;">
   <mat-card-title></mat-card-title>
-  <mat-card-subtitle>{{selectedAlbum}}</mat-card-subtitle>
+  <br><br>
+  <mat-card-subtitle style="color:white">{{selectedAlbum}}</mat-card-subtitle>
   <mat-card-content>
-    <div fxLayout="row" fxLayoutAlign="space-around center">
+    <div fxLayout="column" fxLayoutAlign="space-around center" style="background-color:#19283f">
       <ngb-carousel *ngIf="images.length>1">&nbsp;
         <ng-template ngbSlide *ngFor="let image of images">
-          <div class="wrapper">
-            <img [src]="image.PhotoPath" alt="{{image.Description}}" layout-fill>
-          </div>
+          <!-- <div class="wrapper"> -->
+            <img class="photosize" #img (dblclick)="enlargeImg(img)" [src]="image.PhotoPath" alt="{{image.Description}}">
+          <!-- </div> -->
           <div class="carousel-caption">
-            <h3>{{image.Description}}</h3>
+            <h3 style="color:white">{{image.Description}}</h3>
           </div>
         </ng-template>
       </ngb-carousel>
       <div class="single" *ngIf="images.length==1">
-        <img [src]="images[0].PhotoPath" alt="{{images[0].Description}}">
-      </div>
-      <div>
-        <button mat-button (click)="back()">
-          <mat-icon>arrow_back</mat-icon>
-        </button>
-      </div>
+        <img class="photosize" [src]="images[0].PhotoPath" alt="{{images[0].Description}}">
+      </div>      
+    </div>
+    <div fxLayout="row" fxLayoutAlign="space-around center">
+      <button mat-button (click)="back()">
+        <mat-icon style="color:white">arrow_back</mat-icon>
+      </button>
     </div>
   </mat-card-content>
 </mat-card>
