--- a/src/app/modules/photogallery/cropNuploadphoto/cropNuploadphoto.component.scss
+++ b/src/app/modules/photogallery/cropNuploadphoto/cropNuploadphoto.component.scss
@@ -1,3 +1,11 @@
+:host{
+    width: 74%;
+    
+}
+mat-card{
+    width: 100%;
+    margin-left: 0px;
+}
 image-cropper{
     max-height: 70vh;
 }
@@ -17,20 +25,6 @@ img{
 }
 * {
 	outline:blue;
-}
-.container{
-    display: flex;
-    width: 100%;
-}
-.column1{
-    flex: 3;
-    width:640px;
-    height:480px;
-}
-.column2{
-    flex:1;
-    width: 200px;
-    height: 200px;
 }
 .mat-icon {
     vertical-align: middle;
