--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.html
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.html
@@ -1,22 +1,36 @@
 <mat-card class="mainContainer">
-  <mat-card-title>Photo Gallery</mat-card-title>
+  <mat-card-title style="color:blanchedalmond;">Photo Gallery</mat-card-title>
   <mat-card-content>
     <!-- <form [formGroup]="searchForm"> -->
     <mat-spinner *ngIf="loading"></mat-spinner>
     <!-- <div style="width: 100%;" fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="100px"> -->
-    <mat-form-field>
+    <mat-form-field appearance="outline">
       <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Search album" autocomplete="off">
     </mat-form-field>
-
-    <div fxLayout="row wrap" fxLayoutGap="100px" fxLayoutAlign="space-between start">
-      <div fxLayout="row" fxLayoutAlign="none" *ngFor="let album of Albums" (click)="view(album.FileId)">
-        <div fxLayout="row" fxLayoutAlign="none"  *ngFor="let photo of album.photos;let i=index;" style="margin-bottom: 25px;border:1px solid white">
-          <div class="zero" *ngIf="i<2" fxLayout="row" fxLayoutAlign="none">
-            <img [src]="photo.PhotoPath" *ngIf="i<2" [width]="photo.Width" [height]="photo.Width">
+    <mat-divider style="border-top-color:lightslategrey;"></mat-divider>  
+    <div fxLayout="row wrap" fxLayoutGap="50px" style="padding-top: 20px;">     
+      
+      <div class="whole" fxLayout="column" *ngFor="let album of Albums" (click)="view(album.FileId)">
+        <div fxLayout="row" fxLayoutAlign="center">
+          <div [ngClass]="{'dynamicimgborder': album.photos.length==1}" *ngFor="let photo of album.photos;let i=index;">
+            <img [src]="photo.PhotoPath" *ngIf="i<2" [ngStyle]="{'width': photo.Width,'max-height': photo.Height}">
+            <!-- </div>
+          <div *ngIf="i>1">
+            <img [src]="photo.PhotoPath" *ngIf="i>1" [ngStyle]="{'width': photo.Width,'max-height': photo.Height}"> -->
+            <!-- </div> -->
           </div>
-          <div class="zero" *ngIf="i>1" fxLayout="row" fxLayoutAlign="none">
-            <img [src]="photo.PhotoPath" *ngIf="i>1" [width]="photo.Width" [height]="photo.Width">
+          <div [ngClass]="{'dynamicimgborder': album.photos.length==1}" fxLayout="row wrap" fxLayoutAlign="center"
+            *ngFor="let photo of album.photos;let i=index;">
+            <img [src]="photo.PhotoPath" *ngIf="i>1" [ngStyle]="{'width': photo.Width,'max-height': photo.Height}">
+            <!-- </div>
+          <div *ngIf="i>1">
+            <img [src]="photo.PhotoPath" *ngIf="i>1" [ngStyle]="{'width': photo.Width,'max-height': photo.Height}"> -->
+            <!-- </div> -->
           </div>
+        </div>
+        <div fxLayout="row">
+          <span style="color:white;padding:5px"> {{album.UpdatedFileFolderName|slice:0:30}}</span><span
+            *ngIf="album.UpdatedFileFolderName.length>30">...</span>
         </div>
       </div>
     </div>
