--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
@@ -1,33 +1,30 @@
 :host {
    width:100%;
   }
-// img{
-//     width:"150px";
-//     height:"150px"; 
-//     margin-top: 100px;   
-// }
+.dynamicimgborder{
+    //border:1px solid white;
+    margin-bottom: 5px;
+}
 span:hover{   
     border-radius: 3px;
     transition: all .3s linear;
     cursor:pointer;
-    //background-color: goldenrod;
-//    box-shadow: 5px 5px lightgrey;
     transform: scale(1.1);
-    //transform: skewX(-5deg);
+ 
 }
 mat-card{
-    background-color: #20639b;
-    //top:35px;
-    //max-width: 100%;
+    background-color: #1E4A75;
+    padding: 30px;
+ 
 }
-mat-grid-tile{
-    //position: absolute;
-    // margin-top: 100px;
-    width:200px !important;
-    height: 200px;
+.whole{
+    margin-bottom: 25px !important;
+    background-color:#3171a5;
+    border-radius: 5px;
 }
-.zero{
-    padding: 0px;
-    margin: 0px;
-    border:none;
-}
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: white;
+    //border-color: white;
+    outline: white;
+    border-radius: 5px;
+  }
