--- a/src/app/shared/components/right/right.component.scss
+++ b/src/app/shared/components/right/right.component.scss
@@ -1,6 +1,11 @@
+// :host{
+//     margin-top: 5px;
+// }
 .content{
-    background-color: #20639b;
+    background-color:#1E4A75;// #20639b;
+    //opacity: 0.9;
     width: 280px;
-    padding: 15px;
+    margin-top: 8px;
+    border-top-left-radius: 1em 1em;
     //height:700px;
 }
