--- a/src/app/modules/photogallery/carousel/carousel.component.scss
+++ b/src/app/modules/photogallery/carousel/carousel.component.scss
@@ -17,8 +17,8 @@ mat-card-subtitle{
 }
 .photosize{
   width:100%;  
-  height:400px;
-  object-fit: cover;
+  height:435px;
+  object-fit: contain;
  
 }
 // img:{   
