--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
@@ -19,7 +19,7 @@ mat-card{
 }
 .whole{
     margin-bottom: 25px !important;
-    background-color:#3171a5;
+    background-color:#3889D9;
     border-radius: 5px;
 }
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
