--- a/src/app/modules/FeesManagement/feereceipt/feereceipt.component.scss
+++ b/src/app/modules/FeesManagement/feereceipt/feereceipt.component.scss
@@ -23,8 +23,12 @@ mat-header-cell{
     place-items: center;
 }
 .divCls{
+    font-family: Arial, Helvetica, sans-serif;
     padding:15px 15px 0px 15px;
 }
 button{
     margin-right: 15px;
+}
+div{
+    margin-right: 0px !important;
 }
